[gd_scene load_steps=9 format=3 uid="uid://qcydlda3aeyj"]

[ext_resource type="PackedScene" uid="uid://ct8tdujobt7uy" path="res://scenes/rooms/room_generic.tscn" id="1_aya0h"]
[ext_resource type="Script" uid="uid://n84y1obnvkvl" path="res://scenes/rooms/closet.gd" id="1_fk5th"]
[ext_resource type="Texture2D" uid="uid://big4evw38bnoq" path="res://pictures/cabinets/cartoons/closet.jpg" id="3_wlvcd"]
[ext_resource type="Texture2D" uid="uid://baquvs6lul36t" path="res://pictures/post_it_notes/post_it_notes_3.png" id="3_yni4a"]
[ext_resource type="Texture2D" uid="uid://dvuf0mto1engu" path="res://resources/puzzleTextures/fuse.png" id="5_fk5th"]
[ext_resource type="Texture2D" uid="uid://dgrqjagc6y12l" path="res://resources/puzzleTextures/phone.png" id="5_wlvcd"]
[ext_resource type="Texture2D" uid="uid://ymt2ao0h78qc" path="res://resources/puzzleTextures/breakerDoorOuter.png" id="7_0drd6"]
[ext_resource type="AudioStream" uid="uid://du1w6o06u4ltf" path="res://sfx/click-345983.mp3" id="8_0drd6"]

[node name="Closet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fk5th")

[node name="RoomGeneric" parent="." instance=ExtResource("1_aya0h")]
layout_mode = 1
left_path = "uid://ww3kl5xkl30f"
current_room = 8

[node name="FrontTexture" parent="RoomGeneric" index="0"]
offset_right = 1938.0
offset_bottom = 1099.0
texture = ExtResource("3_wlvcd")

[node name="RightButton" parent="RoomGeneric" index="3"]
visible = false

[node name="OppositeButton" parent="RoomGeneric" index="4"]
visible = false

[node name="FrontPostItNote" parent="RoomGeneric" index="6"]
visible = false
offset_left = 1297.0
offset_top = 347.0
offset_right = -274.0
offset_bottom = -410.0
texture_normal = ExtResource("3_yni4a")

[node name="PhoneButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1589.0
offset_top = 639.0
offset_right = 1805.0
offset_bottom = 818.0
texture_normal = ExtResource("5_wlvcd")
ignore_texture_size = true
stretch_mode = 0

[node name="FuseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 121.0
offset_right = 334.0
offset_bottom = 258.0
texture_normal = ExtResource("5_fk5th")

[node name="BreakerButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 90.0
offset_right = 941.0
offset_bottom = 494.0
texture_normal = ExtResource("7_0drd6")
ignore_texture_size = true
stretch_mode = 0

[node name="GrabAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0drd6")

[connection signal="pressed" from="FuseButton" to="." method="_on_fuse_button_pressed"]
[connection signal="pressed" from="BreakerButton" to="." method="_on_breaker_button_pressed"]

[editable path="RoomGeneric"]
